# prompt-optimizer

./: .cursorrules  .gitignore  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  EXAMPLE.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  fix_regex.py  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup_github.sh  translate_to_english.py
.github/workflows/: ci.yml
config/: best_practices.yaml  mcp-cursor.example.json  mcp-vscode.example.json
examples/: basic_usage.py  model_comparison.py
scripts/: generate_config.py  verify.py
src/: __init__.py  mcp_server.py  utils.py
src/analyzers/: __init__.py  consistency_checker.py  prompt_analyzer.py  readme_importer.py  token_analyzer.py
src/optimizers/: __init__.py  structure_optimizer.py  token_optimizer.py
src/prompt_optimizer/: __init__.py  cli.py  core.py  metrics.py
src/prompt_optimizer/adapters/: __init__.py  base.py  claude_adapter.py  openai_adapter.py
src/prompt_optimizer/strategies/: __init__.py  base.py  semantic_compression.py  structural_optimization.py  token_reduction.py
src/utils/: __init__.py  toon_parser.py
src/validators/: __init__.py  test_generator.py  toon_validator.py
tests/: conftest.py  test_mcp_server_e2e.py
tests/unit/: test_adapters.py  test_core.py  test_metrics.py  test_strategies.py
