[project]
name = "mcp-prompt-optimizer"
version = "0.0.1"
description = "MCP tool to analyze and optimize prompts from the prompt_engineering repository"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
    "transformers>=4.30.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "toon-format @ git+https://github.com/toon-format/toon-python.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-prompt-optimizer = "src.mcp_server:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
